--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -15,9 +16,13 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "postcss-px2rem": "^0.3.0",
-    "stylus": "^0.54.5",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "postcss-px2rem-exclude": "0.0.6",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-cube-ui": "^0.2.5",
     "vue-template-compiler": "^2.6.10"
@@ -25,8 +30,9 @@
   "postcss": {
     "plugins": {
       "autoprefixer": {},
-      "postcss-px2rem": {
-        "remUnit": 37.5
+      "postcss-px2rem-exclude": {
+        "remUnit": 37.5,
+        "exclude": "/node_modules/i"
       }
     }
   },
